 - Fixed: Jellicent/Meowstic sprites now update properly and have their forms. Thanks Favna & sora10pls!
 - Fixed: Xerneas sprite forms being inverted. Thanks trainboy2019!
 - Fixed: CTRL+X will no longer close the program. Thanks forsureitsme!
 - Fixed: Encounter Types are now included for uncommon Pt/HGSS types. Thanks The_RickyAll!
 - Changed: Checksum validity checking disabled for ramsavs.
 - Changed: ID numbers with a prepended Zero will not be auto trimmed.
 - Changed: Window sizing for mono compatibility on Inventory and other editors. Thanks SoujiSeta!
 - Changed: Chinese Translation text improved. Thanks piva223!
 - Changed: ' will be replaced with the ingame ’. Thanks supercarotte!
 - Hotfix: Changing ID/SID & Gender will refresh the preview.
 - Hotfix: Opening the program via a loaded pkx/ekx will properly load the Species/Language. Thanks rskoopa!
 - Hotfix: Importing QR! will copy all ribbons / nonMain data. Thanks hiten!

4/1/15 - New Update:
 - Added: Hidden Power selection drop-down. Changing the selection will modify the IVs appropriately.
 - Added: Showdown/Smogon import (copy text, control click Species label).
 - Added: Wondercard QR exporting/importing (alt-click). No editing is supported.
 - Added: Portuguese language and capability for more languages in the future if necessary. Thanks Sharinflan!
 - Fixed: Clicking OT with an ORAS savegame loaded will load the OT/Region data to the tabbed Pokémon (XY already worked). Thanks
 - Fixed: Changing Countries with certain SubRegions selected will no longer error. Thanks FullLifeGames!
 - Fixed: Add ORAS Items to Memory Item Usage List. Thanks liopds!
 - Fixed: Trash Bytes now are no longer cleared when saving data. Thanks SciresM & Lunarcookies!
 - Fixed: Re-ordered controls to make tabbing flow down the form. Thanks Favna!
 - Changed: PKRS Days capped at legal limits.
 - Changed: Forms drop-down and label will be hidden if a Pokémon has no forms.